--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.24.0
+numpy>=1.24.0
 torch==2.2.2
 torchvision==0.17.2
-wandb==0.17.2
-fastapi==0.111.0
-streamlit==1.36.0
+wandb>=0.17.2
+fastapi>=0.111.0
+streamlit>=1.36.0
