Restructure to make prediction_api self-contained for docker build

--- a/prediction_api/Dockerfile
+++ b/prediction_api/Dockerfile
@@ -1,14 +1,16 @@
 FROM --platform=linux/arm64 python:3.11-slim
 
-WORKDIR /user/src/app
+WORKDIR /app
 
-COPY ../requirements.txt ./
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./prediction_api .
-COPY ../model_registry/latest/scripted_model.pt ./
+COPY . .
 
-ENV MODEL_PATH=scripted_model.pt
+ENV MODEL_PATH=/app/model_registry/latest/scripted_model.pt
+# ENV MODEL_PATH=/app/model_registry/production/scripted_model.pt
+
+EXPOSE 8000
 
 CMD ["uvicorn", "main:app", "--port", "8000", "--host", "0.0.0.0"]
